--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">restaurant_app</string>
+    <string name="app_name">Restaurante</string>
+    <string name="btn_payment">Pagamento</string>
+    <string name="btn_new_order">Novo Pedido</string>
 </resources>
